Fix margin on home page on mobile & update css header

--- a/src/Pages/Home.module.css
+++ b/src/Pages/Home.module.css
@@ -21,7 +21,7 @@ main {
 
 @media (max-width: 1000px) {
   .main-home {
-    margin-top: 0.5rem;
+    padding-top: 0.5rem;
     gap: 0.5rem;
   }
 }
