--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,6 +8,10 @@
   color: inherit;
 }
 
+.header button > span {
+  filter: invert(100%);
+}
+
 .header a:hover,
 .header a:active,
 .header a:focus {
